fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -277,6 +277,10 @@
             .cp-app-contacts-header-title {
                 padding: 10px;
                 flex: 1;
+
+                [dir='rtl'] & {
+                    text-align: right;
+                }
             }
         }
         .cp-app-contacts-tips {
@@ -286,11 +290,19 @@
             font-size: 14px;
             padding: 10px;
             position: relative;
+            [dir='rtl'] & {
+                text-align: right;
+            }
             .cp-app-contacts-tips-close {
                 cursor: pointer;
                 position: absolute;
                 top: 2px;
                 right: 2px;
+
+                [dir='rtl'] & {
+                    right: unset;
+                    left: 2px;
+                }
             }
         }
         .cp-app-contacts-chat {
